--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
         "cross-env": "^5.1",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5"
+    },
+    "dependencies": {
+        "bootstrap": "^4.1.3",
+        "vue": "^2.5.17"
     }
 }
