--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.1.3",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "vue-scrollto": "^2.13.0"
     }
 }
